significant clean-up in 2.4-5

--- a/main.bib
+++ b/main.bib
@@ -341,6 +341,22 @@ MRREVIEWER = {Agn\`es Beaudry},
 MRREVIEWER = {A. Dold},
 }
 
+@article {AtiyahSegalThm,
+    AUTHOR = {Atiyah, M. F.},
+     TITLE = {Characters and cohomology of finite groups},
+   JOURNAL = {Inst. Hautes \'Etudes Sci. Publ. Math.},
+  FJOURNAL = {Institut des Hautes \'Etudes Scientifiques. Publications
+              Math\'ematiques},
+    NUMBER = {9},
+      YEAR = {1961},
+     PAGES = {23--64},
+      ISSN = {0073-8301},
+   MRCLASS = {18.20},
+  MRNUMBER = {0148722},
+MRREVIEWER = {F. Hirzebruch},
+       URL = {http://www.numdam.org/item?id=PMIHES_1961__9__23_0},
+}
+
 @article{Atiyah,
   title={Thom complexes},
   author={Atiyah, Michael Francis},
