clear up 'diagonal of difference' mess

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -583,7 +583,7 @@ Recall that we are considering the natural map \[\AA(H, BP) \to H_* \OS{BP}{2*}.
 \todo{Sean: I don't understand what you are proving where.}
 The infinite loopspaces in \(\OS{BP}{2*}\) are related by \[\Loops^2 \OS{BP}{2(*+1)}' = \OS{BP}{2*},\] so we will use two \index{bar spectral sequence}bar spectral sequences to extract information about \(\OS{BP}{2(*+1)}'\) from \(\OS{BP}{2*}\).  Since we have assumed that \(H_{\le 2(k-1)} \OS{BP}{2*}\) is polynomial in the indicated triangular range near zero, we know that in the first spectral sequence \[E^2_{*, *} = \Tor^{H_* \OS{BP}{2*}}_{*, *}(\F_p, \F_p) \Rightarrow H_* \OS{BP}{2*+1}\] the \(E^2\)--page is, in the same range, exterior on generators in \(\Tor\)--degree \(1\) and topological degree one higher than the generators in the polynomial algebra.  Since differentials lower \(\Tor\)--degree, the spectral sequence is multiplicative, and there are no classes on the \(0\)--line, it collapses in the range \([0, 2k-1]\).  Additionally, since all the generating classes are in odd topological degree, there are no algebra extension problems, and we conclude that \(H_* \OS{BP}{2*+1}\) is indeed exterior up through degree \((2k-1)\).
 
-We now consider the second bar spectral sequence \[E^2_{*, *} = \Tor^{H_* \OS{BP}{2*+1}}_{*, *}(\F_p, \F_p) \Rightarrow H_* \OS{BP}{2(*+1)'}.\]  The \(\Tor\) algebra of an exterior algebra is divided power on a class of topological dimension one higher.  Since these classes are now all in even degrees, the spectral sequence collapses in the range \([0, 2k]\).  Additionally, these primitive classes are related to the original generating classes by double suspension, i.e., by forming the \(\circ\)--product with \(\beta_{(0)}\).  This shows the first inductive claim on the \emph{primitive classes} through degree \(2k\), and we must argue further to deduce our generation result for \(x^{[p^j]}\) of degree \(2k\) with \(j > 0\).  By inductive assumption, we can write \[x = \<y\> \circ \beta_{(0)}^{\circ I_0} \circ \beta_{(1)}^{\circ I_1} \circ \cdots,\] and one might be divinely inspired to consider the element \[z := \<y\> \circ \beta_{(j)}^{\circ I_0} \circ \beta_{(j+1)}^{\circ I_1} \circ \cdots.\]  This element \(z\) isn't equal to \(x^{[p^j]}\) on the nose, but the diagonal of the difference \(z - x^{[p^j]}\) lies in lower filtration degree---i.e., it is primitive as far as the filtration is concerned---and so we are again done.
+We now consider the second bar spectral sequence \[E^2_{*, *} = \Tor^{H_* \OS{BP}{2*+1}}_{*, *}(\F_p, \F_p) \Rightarrow H_* \OS{BP}{2(*+1)'}.\]  The \(\Tor\) algebra of an exterior algebra is divided power on a class of topological dimension one higher.  Since these classes are now all in even degrees, the spectral sequence collapses in the range \([0, 2k]\).  Additionally, these primitive classes are related to the original generating classes by double suspension, i.e., by forming the \(\circ\)--product with \(\beta_{(0)}\).  This shows the first inductive claim on the \emph{primitive classes} through degree \(2k\), and we must argue further to deduce our generation result for \(x^{[p^j]}\) of degree \(2k\) with \(j > 0\).  By inductive assumption, we can write \[x = \sum_I \<y_I\> \circ \beta_{(0)}^{\circ I_0} \circ \beta_{(1)}^{\circ I_1} \circ \cdots,\] and it suffices to treat the case where the sum has just one term.  Aiming to understand \(x^{[p^j]}\), one might be divinely inspired to consider the element \[z := \<y_I\> \circ \beta_{(j)}^{\circ I_0} \circ \beta_{(j+1)}^{\circ I_1} \circ \cdots.\]  This element \(z\) isn't equal to \(x^{[p^j]}\) on the nose, but the coproduct of \(z - x^{[p^j]}\) can be manually calculated to in lower filtration degree, so that \(z \equiv x^{[p^j]}\) holds modulo filtration degree in the bar spectral sequence.  Since \(z\) itself is defined as a \(\circ\)--product, the full inductive claim follows.
 
 The remaining thing to do is to use the size bounds: the only way that the map \[\AA(H, BP) \to H_* \OS{BP}{2*}\] could be surjective is if there were multiplicative extensions in the spectral sequence joining \(x^{[p]}\) to \(x^p\).  Granting this, we see that the module ranks of the algebra itself and of its indecomposables are exactly the right size to be a free (i.e., polynomial) algebra, and hence this must be the case by \index{Milnor--Moore}Milnor--Moore.
 \end{proof}
@@ -604,7 +604,7 @@ The case of \(E = \HFp\) is \Cref{HFpBPCooperationsTheorem}.  Since \(\HFp_* \OS
 This is an impressively broad claim: the loopspaces \(\OS{MU}{2*}\) are quite complicated, and that any general statement can be made about them is remarkable.  That this fact follows from a calculation in \(\HFp\)--homology and some niceness observations is meant to showcase the density of \(\CP^\infty_H \cong \G_a\) inside of \(\moduli{fg}\).\footnote{Equivalently: the convergence of Postnikov towers.}\footnote{It is worth pointing out that the success of this calculation is misleading as to how difficult unstable calculations can be.  For instance, the Johnson--Yosimura conjecture is that for a space \(X\) and \(x \in BP_n(X)\) a \(BP\)--homology class, \(x\) is \(v_n\)--torsion-free~\cite[pg.\ 37]{Wilson}.  Even related stable conjectures are unsettled: for \(\S^m \to X \to Y\) a cofibration of finite complexes with \(BP_*(X)\) of homological dimension less than \(n\), it is conjectured that the homological dimension of \(BP_*(Y)\) is less than \(n+1\)~\cite[Conjecture 6.8]{JohnsonWilsonProjDim}; and if \(0 \ne y \in BP\<n\>_s(X)\) is a \(v_n\)--torsion-element of a space $X$, it is conjectured that \(s < \dim(X)\)~\cite[Question 6.11]{JohnsonWilsonProjDim}.}
 
 \begin{remark}
-The analysis of the first bar spectral sequence in the proof of \Cref{HFpBPCooperationsInduction} also gave us a description of \(H_* \OS{BP}{2*+1}\), which is not directly visible to \(\AA(H, BP)\).  Namely, the Hopf ring \(H_* \OS{BP}{*}\) can be presented as \[H_* \OS{BP}{*} \xleftarrow{\simeq} \AA(H, BP)[e] / (e^{\circ 2} = \beta_{(0)}),\] with \index{homology suspension}\(e\) of degree \(1\).  Additionally, analyzing the cohomological bar spectral sequence (and noting that the dual of a divided power algebra is a polynomial algebra) shows that each \(H_* \OS{BP}{2*}\) forms a \index{Hopf algebra!bipolynomial}\textit{bipolynomial Hopf algebra}---i.e., both it and its dual are polynomial algebras.  These bipolynomial algebras also play a critical role in the next two sections.
+The analysis of the first bar spectral sequence in the proof of \Cref{HFpBPCooperationsInduction} also gave us a description of \(H_* \OS{BP}{2*+1}\), which is not directly visible to \(\AA(H, BP)\).  Namely, the Hopf ring \(H_* \OS{BP}{*}\) can be presented as \[H_* \OS{BP}{*} \xleftarrow{\simeq} \AA(H, BP)[e] / (e^{\circ 2} = \beta_{(0)}),\] with \index{homology suspension}\(e\) of degree \((1, 1)\).  Additionally, analyzing the cohomological bar spectral sequence (and noting that the dual of a divided power algebra is a polynomial algebra) shows that each \(H_* \OS{BP}{2*}\) forms a \index{Hopf algebra!bipolynomial}\textit{bipolynomial Hopf algebra}---i.e., both it and its dual are polynomial algebras.  These bipolynomial algebras also play a critical role in the next two sections.
 \end{remark}
 
 \begin{remark}[{\cite{Chan}, \cite[Section 10]{Wilson}}]
